@@ -6,6 +6,8 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 
+import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -16,25 +18,27 @@ class BoardRepositoryTest {
     @Autowired
     private BoardRepository boardRepository;
 
-    private Board b1, b2;
+    private Board b1, b2, b3;
 
     @BeforeEach
     void setUp() {
         b1 = new Board("test1", true);
-        b2 = new Board("test2", true);
-        boardRepository.saveAll(List.of(b1, b2));
+        b2 = new Board("test2", false);
+        b3 = new Board("333te", true);
+        boardRepository.saveAll(List.of(b1, b2, b3));
     }
 
     @Test
     void findByBoradName() {
-        assertEquals(List.of(b1), boardRepository.findByBoardNameLike("test1"));
-        assertEquals(List.of(b2), boardRepository.findByBoardNameLike("test2"));
+        assertEquals(List.of(b1, b2), boardRepository.findByBoardNameContains("test"));
+        assertEquals(List.of(b3), boardRepository.findByBoardNameContains("3"));
+        assertEquals(List.of(b1, b2, b3), boardRepository.findByBoardNameContains("t"));
+        assertEquals(List.of(b1, b2, b3), boardRepository.findByBoardNameContains(""));
 
-        assertEquals(List.of(b1, b2), boardRepository.findByBoardNameLike("%test%"));
-        assertNotEquals(List.of(b1, b2), boardRepository.findByBoardNameLike("test"));
+        assertEquals(Collections.emptyList(), boardRepository.findByBoardNameContains(" "));
 
-        assertEquals(1, boardRepository.findByBoardNameLike("%test%").get(0).getId());
-        assertEquals(2, boardRepository.findByBoardNameLike("%test%").get(1).getId());
+        assertEquals(1, boardRepository.findByBoardNameContains("").get(0).getId());
+        assertEquals(2, boardRepository.findByBoardNameContains("").get(1).getId());
     }
 
 }
